<resources>
    <string name="app_name">Shop</string>
    <!--登陆页面-->
    <string name="app_cname">"校园闲置二手交易"</string>
    <string name="input_phoneNumber">"请输入手机号"</string>
    <string name="input_password">"请输入密码"</string>
    <string name="button_login">"登录"</string>
    <string name="check_agree">"已阅读并同意服务协议和隐私保护指引"</string>
    <string name="new_register">"新用户注册"</string>
    <string name="findpsw">"找回密码"</string>
    <!--找回密码页面-->
    <string name="get_code">"获取验证码"</string>
    <string name="code">"请输入验证码"</string>
    <string name="button_confirm">"确认"</string>
    <!--注册界面-->
    <string name="username">"昵称"</string>
    <string name="school">"学校"</string>
    <string name="studentNumber">"学号"</string>
    <string name="phoneNumber">"手机"</string>
    <string name="password">"密码"</string>
    <string name="register">"注册"</string>
    <!--首页-->
    <string name="mainFragment">"首页"</string>
    <string name="presentFragment">"分类"</string>
    <string name="publishFragment">"发布"</string>
    <string name="mineFragment">"我的"</string>
    <!--我的-->
    <string name="quit">"退出登录"</string>
    <string name="mine">"个人中心"</string>
    <string name="published">"已发布的"</string>
    <string name="sold">"已卖出的"</string>
    <string name="buyed">"已买到的"</string>
    <string name="modifyInformation">"基本资料"</string>
    <string name="collectionItem">"我的收藏"</string>
    <string name="recommend">"推荐"</string>
    <string name="take_photos">拍照</string>
    <string name="from_albums">从相册中选择</string>
    <string name="cancel">取 消</string>
    <string name="information_edit">个人资料</string>
    <!--分类-->
    <string name="sort">热门分类</string>
    <!--发布-->
    <string name="publish">发布商品</string>
    <string name="finish">完成</string>
    <string name="goodsTitle">标题</string>
    <string name="goodsPrice">价格</string>
    <string name="goodsOriginalPrice">原价</string>
    <string name="fax">可不填</string>
    <string name="goodsIntro">商品简介</string>
    <string name="delivery">送货方式</string>
    <string name="visit">送货上门</string>
    <string name="takeGoods">自己来取</string>
    <string name="my_location">我在</string>
    <!--商品详情-->
    <string name="goods_detail">商品详情</string>
    <string name="goodsSort">类别</string>
    <string name="bt_publish">发布</string>
    <string name="details">详情:</string>
    <string name="detailsContent">具体内容...</string>
    <string name="sellerPhoneNumber">联系电话:</string>
    <string name="location">地址:</string>
    <string name="buy">立即购买</string>
    <string name="goodsImg">添加图片</string>
    <string name="delivery2">送货方式:</string>


</resources>