<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.LoginFragment">

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/app_cname"
        android:textStyle="bold"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />
    <LinearLayout
        android:id="@+id/ll_user_login"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintTop_toBottomOf="@id/tv_app_name"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">


        <!--android:layout_gravity="center_horizontal"失效？？-->
        <RelativeLayout
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            app:layout_constraintBottom_toBottomOf="@id/tv_app_name">

            <EditText
                android:id="@+id/et_user_phone"
                android:layout_width="320dp"
                android:layout_height="60dp"
                android:background="@drawable/edittext"
                android:hint="@string/input_phoneNumber"
                android:singleLine="true"
                android:inputType="phone"
                android:paddingLeft="30dp"
                android:textColor="@color/black"
                android:textColorHint="@color/login_edittext_hint"
                android:textSize="20sp" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rl_user_psw"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp">

            <EditText
                android:id="@+id/et_user_psw"
                android:layout_width="320dp"
                android:layout_height="60dp"
                android:background="@drawable/edittext"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                android:paddingLeft="30dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/login_edittext_hint"
                android:textSize="20sp" />
        </RelativeLayout>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        app:layout_constraintTop_toBottomOf="@id/ll_user_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <CheckBox
            android:id="@+id/cb_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/check_agree"
            android:textSize="12sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/bt_login"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button"
        android:text="@string/button_login"
        android:layout_marginTop="60dp"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/ll_user_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.1"
        tools:ignore="MissingConstraints">
        <View
            android:id="@+id/bottom_line"
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:layout_centerHorizontal="true"
            android:background="@color/white"/>

        <TextView
            android:id="@+id/tv_findpsw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="25dp"
            android:layout_toStartOf="@id/bottom_line"
            android:text="@string/findpsw"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_toEndOf="@id/bottom_line"
            android:text="@string/new_register"
            android:textSize="15sp" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>