<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#55555555">

    <TextView
        android:id="@+id/tv_take_photo"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_above="@+id/tv_line"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/take_photos"
        android:textColor="#0479FE"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_line"
        android:layout_width="match_parent"
        android:layout_above="@+id/tv_from_albums"
        android:layout_height="0.1dp"
        android:background="#D9D8D3" />

    <TextView
        android:id="@+id/tv_from_albums"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_above="@+id/ll_cancel"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/from_albums"
        android:textColor="#0479FE"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/ll_cancel"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="7dp"
        android:background="@color/white">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="#0479FE"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>
